--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
     "@types/marked": "0.6.5",
     "autoprefixer": "9.5.1",
     "babel-loader": "8.0.6",
+    "cheerio": "1.0.0-rc.3",
     "clean-webpack-plugin": "2.0.2",
     "css-loader": "2.1.1",
     "extract-css-chunks-webpack-plugin": "4.5.1",
