--- a/firebase.json
+++ b/firebase.json
@@ -12,7 +12,7 @@
       },
       {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "/__index.html"
       }
     ]
   },
