--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
     "@babel/plugin-transform-runtime": "7.4.4",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-typescript": "7.3.3",
+    "@kocal/rollup-plugin-graphql": "1.0.0",
     "@types/graphql": "14.2.0",
     "@yelo/rollup-node-external": "^1.0.1",
     "firebase-functions-test": "0.1.6",
@@ -20,8 +21,7 @@
     "rollup": "^1.12.3",
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-node-resolve": "5.0.0",
-    "rollup-plugin-progress": "1.1.1",
-    "rollup-plugin-string": "3.0.0"
+    "rollup-plugin-progress": "1.1.1"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.4.5",
