--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,6 +12,7 @@
     "@babel/plugin-proposal-decorators": "7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "7.4.4",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-syntax-jsx": "7.2.0",
     "@babel/plugin-transform-runtime": "7.4.4",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-typescript": "7.3.3",
@@ -19,7 +20,9 @@
     "@starptech/prettyhtml": "0.9.0",
     "@types/marked": "0.6.5",
     "autoprefixer": "9.5.1",
+    "babel-helper-vue-jsx-merge-props": "2.0.3",
     "babel-loader": "8.0.6",
+    "babel-plugin-transform-vue-jsx": "4.0.1",
     "cheerio": "1.0.0-rc.3",
     "clean-webpack-plugin": "2.0.2",
     "css-loader": "2.1.1",
@@ -63,7 +66,6 @@
     "vue-apollo": "3.0.0-beta.30",
     "vue-class-component": "7.1.0",
     "vue-meta": "1.6.0",
-    "vue-property-decorator": "8.1.1",
     "vue-router": "3.0.6",
     "vuex": "3.1.1",
     "vuex-class": "0.3.2",
