--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -64,8 +64,8 @@
     "popper.js": "1.15.0",
     "vue": "2.6.10",
     "vue-apollo": "3.0.0-beta.30",
-    "vue-class-component": "7.1.0",
     "vue-meta": "1.6.0",
+    "vue-property-decorator": "8.1.1",
     "vue-router": "3.0.6",
     "vuex": "3.1.1",
     "vuex-class": "0.3.2",
