--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,8 +22,9 @@
     "@vue/babel-preset-jsx": "1.0.0",
     "autoprefixer": "9.5.1",
     "babel-loader": "8.0.6",
+    "babel-plugin-transform-typescript-metadata": "0.2.2",
     "cheerio": "1.0.0-rc.3",
-    "clean-webpack-plugin": "2.0.2",
+    "clean-webpack-plugin": "3.0.0",
     "css-loader": "2.1.1",
     "extract-css-chunks-webpack-plugin": "4.5.2",
     "file-loader": "3.0.1",
@@ -37,6 +38,7 @@
     "pug": "2.0.3",
     "pug-plain-loader": "1.0.0",
     "sass-loader": "7.1.0",
+    "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.3.0",
     "typescript": "3.5.1",
@@ -44,18 +46,19 @@
     "vue-template-compiler": "2.6.10",
     "webpack": "4.32.2",
     "webpack-cli": "3.3.2",
-    "webpack-dev-server": "3.4.1"
+    "webpack-dev-server": "3.5.1"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.4.5",
     "@types/graphql": "14.2.0",
+    "@vue-decorators/all": "1.1.0",
     "@vue/babel-helper-vue-jsx-merge-props": "1.0.0",
     "apollo-boost": "0.4.0",
     "apollo-client": "2.6.0",
     "bootstrap": "4.3.1",
     "core-js": "3.1.3",
-    "element-theme-chalk": "2.9.0",
-    "element-ui": "2.9.0",
+    "element-theme-chalk": "2.9.1",
+    "element-ui": "2.9.1",
     "graphql": "14.3.1",
     "graphql-tag": "2.10.1",
     "jquery": "3.4.1",
@@ -65,10 +68,8 @@
     "vue": "2.6.10",
     "vue-apollo": "3.0.0-beta.30",
     "vue-meta": "1.6.0",
-    "vue-property-decorator": "8.1.1",
     "vue-router": "3.0.6",
     "vuex": "3.1.1",
-    "vuex-class": "0.3.2",
     "vuex-router-sync": "5.0.0",
     "whatwg-fetch": "3.0.0"
   }
