--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,20 +7,20 @@
     "dev-server": "webpack-dev-server --progress"
   },
   "devDependencies": {
-    "@babel/core": "7.6.2",
+    "@babel/core": "7.6.4",
     "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/plugin-proposal-decorators": "7.6.0",
     "@babel/plugin-proposal-object-rest-spread": "7.6.2",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-jsx": "7.2.0",
     "@babel/plugin-transform-runtime": "7.6.2",
-    "@babel/preset-env": "7.6.2",
+    "@babel/preset-env": "7.6.3",
     "@babel/preset-typescript": "7.6.0",
     "@babel/register": "7.6.2",
     "@starptech/prettyhtml": "0.10.0",
     "@types/marked": "0.6.5",
-    "@vue/babel-preset-jsx": "1.1.0",
-    "autoprefixer": "9.6.1",
+    "@vue/babel-preset-jsx": "1.1.1",
+    "autoprefixer": "9.6.4",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-typescript-metadata": "0.2.2",
     "clean-webpack-plugin": "3.0.0",
@@ -38,33 +38,35 @@
     "pug-plain-loader": "1.0.0",
     "sass-loader": "8.0.0",
     "style-loader": "1.0.0",
-    "terser-webpack-plugin": "2.1.0",
-    "typescript": "3.6.3",
+    "terser-webpack-plugin": "2.1.3",
+    "typescript": "3.6.4",
     "vue-loader": "15.7.1",
     "vue-template-compiler": "2.6.10",
-    "webpack": "4.41.0",
+    "webpack": "4.41.1",
     "webpack-cli": "3.3.9",
-    "webpack-dev-server": "3.8.1"
+    "webpack-dev-server": "3.8.2"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "7.6.2",
+    "@babel/runtime-corejs3": "7.6.3",
     "@vue-decorators/all": "1.8.1",
     "@vue/babel-helper-vue-jsx-merge-props": "1.0.0",
     "apollo-boost": "0.4.4",
     "apollo-client": "2.6.4",
     "bootstrap": "4.3.1",
+    "bootstrap-vue": "^2.0.4",
     "core-js": "3.2.1",
     "element-theme-chalk": "2.12.0",
     "element-ui": "2.12.0",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
-    "jquery": "3.4.1",
+    "intersection-observer": "^0.7.0",
     "marked": "0.7.0",
     "moment": "2.24.0",
     "popper.js": "1.15.0",
+    "regenerator-runtime": "^0.13.3",
     "vue": "2.6.10",
-    "vue-apollo": "3.0.0-rc.6",
-    "vue-meta": "2.2.2",
+    "vue-apollo": "3.0.0-rc.7",
+    "vue-meta": "2.3.1",
     "vue-router": "3.1.3",
     "vuex": "3.1.1",
     "vuex-router-sync": "5.0.0",
