--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -51,19 +51,17 @@
     "@vue-decorators/all": "1.8.1",
     "@vue/babel-helper-vue-jsx-merge-props": "1.0.0",
     "apollo-boost": "0.4.4",
-    "apollo-client": "2.6.4",
     "bootstrap": "4.3.1",
-    "bootstrap-vue": "^2.0.4",
+    "bootstrap-vue": "2.0.4",
     "core-js": "3.2.1",
     "element-theme-chalk": "2.12.0",
     "element-ui": "2.12.0",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
-    "intersection-observer": "^0.7.0",
+    "intersection-observer": "0.7.0",
     "marked": "0.7.0",
     "moment": "2.24.0",
-    "popper.js": "1.15.0",
-    "regenerator-runtime": "^0.13.3",
+    "regenerator-runtime": "0.13.3",
     "vue": "2.6.10",
     "vue-apollo": "3.0.0-rc.7",
     "vue-meta": "2.3.1",
