--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -61,6 +61,7 @@
     "intersection-observer": "0.7.0",
     "marked": "0.7.0",
     "moment": "2.24.0",
+    "postcss-scrollbar": "0.3.0",
     "regenerator-runtime": "0.13.3",
     "vue": "2.6.10",
     "vue-apollo": "3.0.0-rc.7",
