--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,7 +20,7 @@
     "@starptech/prettyhtml": "0.10.0",
     "@types/marked": "0.6.5",
     "@vue/babel-preset-jsx": "1.1.1",
-    "autoprefixer": "9.6.4",
+    "autoprefixer": "9.7.0",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-typescript-metadata": "0.2.2",
     "clean-webpack-plugin": "3.0.0",
@@ -31,20 +31,20 @@
     "html-webpack-plugin": "3.2.0",
     "html-webpack-template": "6.2.0",
     "moment-locales-webpack-plugin": "1.1.0",
-    "node-sass": "4.12.0",
+    "node-sass": "4.13.0",
     "postcss-loader": "3.0.0",
     "prerender-spa-plugin": "3.4.0",
     "pug": "2.0.4",
     "pug-plain-loader": "1.0.0",
     "sass-loader": "8.0.0",
     "style-loader": "1.0.0",
-    "terser-webpack-plugin": "2.1.3",
+    "terser-webpack-plugin": "2.2.1",
     "typescript": "3.6.4",
     "vue-loader": "15.7.1",
     "vue-template-compiler": "2.6.10",
-    "webpack": "4.41.1",
+    "webpack": "4.41.2",
     "webpack-cli": "3.3.9",
-    "webpack-dev-server": "3.8.2"
+    "webpack-dev-server": "3.9.0"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.6.3",
@@ -53,7 +53,7 @@
     "apollo-boost": "0.4.4",
     "bootstrap": "4.3.1",
     "bootstrap-vue": "2.0.4",
-    "core-js": "3.2.1",
+    "core-js": "3.3.5",
     "element-theme-chalk": "2.12.0",
     "element-ui": "2.12.0",
     "graphql": "14.5.8",
@@ -64,7 +64,7 @@
     "postcss-scrollbar": "0.3.0",
     "regenerator-runtime": "0.13.3",
     "vue": "2.6.10",
-    "vue-apollo": "3.0.0-rc.7",
+    "vue-apollo": "3.0.0",
     "vue-meta": "2.3.1",
     "vue-router": "3.1.3",
     "vuex": "3.1.1",
