--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,21 +16,22 @@
     "@kocal/rollup-plugin-graphql": "1.0.0",
     "@types/graphql": "14.5.0",
     "@yelo/rollup-node-external": "1.0.1",
-    "rollup": "1.23.1",
+    "rollup": "1.26.0",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-generate-package-json": "3.1.3",
+    "rollup-plugin-license": "0.12.1",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-progress": "1.1.1"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.6.3",
-    "@google-cloud/firestore": "2.4.0",
-    "apollo-server-express": "2.9.6",
+    "@google-cloud/firestore": "2.5.0",
+    "apollo-server-express": "2.9.7",
     "express": "4.17.1",
-    "firebase-admin": "8.6.0",
+    "firebase-admin": "8.6.1",
     "firebase-functions": "3.3.0",
     "graphql": "14.5.8",
     "graphql-voyager": "1.0.0-rc.28",
-    "source-map-support": "0.5.13"
+    "source-map-support": "0.5.16"
   }
 }
