--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,26 +7,26 @@
     "dev-server": "webpack-dev-server --progress"
   },
   "devDependencies": {
-    "@babel/core": "7.7.4",
+    "@babel/core": "7.7.7",
     "@babel/plugin-proposal-class-properties": "7.7.4",
     "@babel/plugin-proposal-decorators": "7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.7.7",
     "@babel/plugin-syntax-dynamic-import": "7.7.4",
     "@babel/plugin-syntax-jsx": "7.7.4",
-    "@babel/plugin-transform-runtime": "7.7.4",
-    "@babel/preset-env": "7.7.4",
-    "@babel/preset-typescript": "7.7.4",
-    "@babel/register": "7.7.4",
+    "@babel/plugin-transform-runtime": "7.7.6",
+    "@babel/preset-env": "7.7.7",
+    "@babel/preset-typescript": "7.7.7",
+    "@babel/register": "7.7.7",
     "@starptech/prettyhtml": "0.10.0",
     "@types/marked": "0.7.2",
     "@vue/babel-preset-jsx": "1.1.2",
-    "autoprefixer": "9.7.2",
+    "autoprefixer": "9.7.3",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-typescript-metadata": "0.2.2",
     "clean-webpack-plugin": "3.0.0",
-    "css-loader": "3.2.0",
-    "extract-css-chunks-webpack-plugin": "4.6.0",
-    "file-loader": "4.3.0",
+    "css-loader": "3.4.0",
+    "extract-css-chunks-webpack-plugin": "4.7.1",
+    "file-loader": "5.0.2",
     "friendly-errors-webpack-plugin": "1.7.0",
     "html-webpack-plugin": "3.2.0",
     "html-webpack-template": "6.2.0",
@@ -36,34 +36,35 @@
     "prerender-spa-plugin": "3.4.0",
     "pug": "2.0.4",
     "pug-plain-loader": "1.0.0",
+    "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
-    "style-loader": "1.0.0",
-    "terser-webpack-plugin": "2.2.1",
-    "typescript": "3.7.2",
-    "vue-loader": "15.7.2",
-    "vue-template-compiler": "2.6.10",
-    "webpack": "4.41.2",
+    "style-loader": "1.1.1",
+    "terser-webpack-plugin": "2.3.1",
+    "typescript": "3.7.4",
+    "vue-loader": "15.8.3",
+    "vue-template-compiler": "2.6.11",
+    "webpack": "4.41.4",
     "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0"
+    "webpack-dev-server": "3.10.1"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "7.7.4",
+    "@babel/runtime-corejs3": "7.7.7",
     "@vue-decorators/all": "1.8.1",
     "@vue/babel-helper-vue-jsx-merge-props": "1.0.0",
-    "apollo-boost": "0.4.4",
-    "bootstrap": "4.3.1",
+    "apollo-boost": "0.4.7",
+    "bootstrap": "4.4.1",
     "bootstrap-vue": "2.1.0",
-    "element-theme-chalk": "2.12.0",
-    "element-ui": "2.12.0",
+    "element-theme-chalk": "2.13.0",
+    "element-ui": "2.13.0",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
     "intersection-observer": "0.7.0",
-    "marked": "0.7.0",
+    "marked": "0.8.0",
     "moment": "2.24.0",
     "postcss-scrollbar": "0.3.0",
     "regenerator-runtime": "0.13.3",
-    "vue": "2.6.10",
-    "vue-apollo": "3.0.0",
+    "vue": "2.6.11",
+    "vue-apollo": "3.0.2",
     "vue-meta": "2.3.1",
     "vue-router": "3.1.3",
     "vuex": "3.1.2",
